Remove unnecessary Collectors usage